hydro_lang/src/rewrites/snapshots/hydro_lang__rewrites__persist_pullup__tests__persist_pullup_through_map-2.snap
---
source: hydro_lang/src/rewrites/persist_pullup.rs
expression: optimized.ir()
---
[
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Map {
            f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }),
            input: Source {
                source: Iter(
                    { use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; 0 .. 10 },
                ),
                location_kind: Process(
                    0,
                ),
                metadata: HydroNodeMetadata {
                    location_kind: Process(
                        0,
                    ),
                    output_type: Some(
                        i32,
                    ),
                },
            },
            metadata: HydroNodeMetadata {
                location_kind: Process(
                    0,
                ),
                output_type: Some(
                    i32,
                ),
            },
        },
    },
]
